# NanoForge

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: install.py  install.sh
src/: lib.rs  main.rs
src/builds/: mod.rs  nanoservice.rs
src/docker_files/: cache.rs  docker_commands.rs  mod.rs  unpacking.rs
src/toml_operations/: finder.rs  kernel.rs  mod.rs  read.rs
src/toml_operations/file_ops/: calculate_paths.rs  find_all_cargos.rs  mod.rs  read.rs  write.rs
src/toml_operations/nanoservices/: configure_cargo_toml.rs  get_all.rs  kernel.rs  mod.rs  processes.rs  wipe.rs
src/toml_operations/nanoservices/processes/: config.rs  get.rs  graph.rs  install.rs  mod.rs  prep.rs
tests/assets/: Cargo.toml  corrupt.toml
