[package]
name = "nanoforge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.115"
tar = "0.4.40"
flate2 = "1.0.28"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
walkdir = "2.5.0"
pathdiff = "0.2.1"

[dev-dependencies]
